--- a/src/main/resources/static/courses.html
+++ b/src/main/resources/static/courses.html
@@ -33,8 +33,8 @@
                   </div>
                   <div class="student-header-container">
                       <p>{{firstName}}  {{lastName}}</p>
-                      <img src="./assets/harvey.png" alt="student" >
-                      <ul>
+                      <img :src="`./assets/${firstName.toLowerCase()}.png`" alt="student" >
+                      <ul @click="logout">
                           <li class="d-flex justify-content-between align-items-center"><i class="fa-solid fa-right-from-bracket me-2"></i><p>Logout</p></li>
                       </ul>
                   </div>
@@ -297,6 +297,10 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
     </script>
+     <script
+     src="https://kit.fontawesome.com/2544a6d2ae.js"
+     crossorigin="anonymous"
+ ></script>
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://unpkg.com/vue@3"></script>
