--- a/src/main/resources/static/merchandise.html
+++ b/src/main/resources/static/merchandise.html
@@ -31,8 +31,8 @@
                 </div>
                 <div class="student-header-container">
                     <p>{{firstName}}  {{lastName}}</p>
-                    <img src="./assets/harvey.png" alt="student" >
-                    <ul>
+                    <img :src="`./assets/${firstName.toLowerCase()}.png`" alt="student" >
+                    <ul @click="logout">
                         <li class="d-flex justify-content-between align-items-center"><i class="fa-solid fa-right-from-bracket me-2"></i><p>Logout</p></li>
                     </ul>
                 </div>
@@ -198,6 +198,10 @@
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" 
         crossorigin="anonymous">
       </script>
+       <script
+       src="https://kit.fontawesome.com/2544a6d2ae.js"
+       crossorigin="anonymous"
+   ></script>
       <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
       <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
       <script src="https://unpkg.com/vue@3"></script>
