--- a/src/main/resources/static/students.html
+++ b/src/main/resources/static/students.html
@@ -40,8 +40,8 @@
                              </div>
                              <div class="student-header-container">
                                  <p>{{firstName}}  {{lastName}}</p>
-                                 <img src="./assets/harvey.png" alt="student" >
-                                 <ul>
+                                 <img :src="`./assets/${firstName.toLowerCase()}.png`" alt="student" >
+                                 <ul @click="logout">
                                      <li class="d-flex justify-content-between align-items-center"><i class="fa-solid fa-right-from-bracket me-2"></i><p>Logout</p></li>
                                  </ul>
                              </div>
@@ -61,7 +61,7 @@
                     <!----------------- MAIN - Left Container ----------------->
                     <div id="students-left-container">
                          <div id="encabezado_students">
-                              <img src="./assets/harvey.png" alt="student" class="student-avatar">
+                              <img src="./assets/juan.png" alt="student" class="student-avatar">
                               <div>
                                    <h2>Hi {{firstName}}</h2>
                                    <p>
@@ -73,7 +73,7 @@
                               <p class="no_margin"><span class="encabezados_chicos">Active Courses!</span></p>
                               <div class="d-flex p-1">
                                    <div v-for="course in courses" class="merchItem d-flex flex-column align-items-center">
-                                        <img src="https://via.placeholder.com/125" alt="" srcset="" class="mb-2">
+                                        <img :src="`./assets/${course.name.toLowerCase()}.png`" alt="" srcset="" class="mb-2">
                                         <p class="m-0">Name: {{course.name}}</p>
                                         <p class="m-0">Level: {{course.level}}</p>
                                         <p class="m-0">Lessons: {{course.lessons}}</p>
@@ -95,13 +95,14 @@
                             
                              
                          </div>
-                         <div class="profileCard w-75">
+                         <div class="profileCard w-75 p-4">
                               <p class="no_margin"><span class="encabezados_chicos">Gets more courses</span></p>
                               <h2 class="bold">
                                    Music is like the water of a river, impossible to stop.</h2>
-                              <p>Therefore, keep investing in yourself and get new courses which will make you a great musician and artist.
+                              <p class="fs-5 mb-4">Therefore, keep investing in yourself and get new courses that will make you a great musician and artist.
+                                   From Emusic we do everything on our part so that you can educate yourself in the best possible way. Our motto is LEARN BY DOING, since practice makes perfect.
                               </p>
-                              <a class="mt-3" id="btn-login" href="./courses.html">Get more courses</a>
+                              <a id="btn-login" href="./courses.html">Get more courses</a>
                          </div>
                          <div class="profileCard w-auto">
                               <img src="./assets/logo-nav.png" alt="logo" class="w-100">
@@ -125,7 +126,7 @@
                                    </thead>
                                    <tbody v-if="courses.length >= 6">
                                         <tr v-for="course in courses">
-                                             <th scope="row">1</th>
+                                             <th scope="row">#</th>
                                              <td>{{course.name}}</td>
                                              <td>{{course.teacher.firstName}} {{course.teacher.lastName}}</td>
                                              <td v-if="course.active"> Active</td>
@@ -134,7 +135,7 @@
                                    </tbody>
                                    <tbody v-else>
                                         <tr v-for="course in courses">
-                                             <th scope="row">1</th>
+                                             <th scope="row">#</th>
                                              <td>{{course.name}}</td>
                                              <td>{{course.teacher.firstName}} {{course.teacher.lastName}}</td>
                                              <td v-if="course.active"> Active</td>
