modifique el PurchaseOrder, le agregue una propiedad nueva, arregle el pdf que no funcionaba en el navegador

--- a/src/main/resources/static/prueba.html
+++ b/src/main/resources/static/prueba.html
@@ -10,6 +10,7 @@
     <div id="app">
         <button v-on:click="login">LOGIN</button>
         <button v-on:click="ticketCompra">PRUEBA</button>
+        <button v-on:click="descargarPDF">PDF</button>
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
