--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -173,7 +173,7 @@
                 <!------------------ Main - Teachers Section ------------------>
                 <section class="teachers">
                     <div class="teachers-container">
-                        <div v-for="teacher in teachers" class="card">
+                        <div v-for="teacher in teachers" class="card" >
                             <img v-if="teacher.lastName === 'Jordison'" src="/assets/Joey.png" class="card-img">
                             <img v-if="teacher.lastName === 'Portnoy'" src="/assets/mikePortnoy.png" class="card-img">
                             <img v-if="teacher.lastName === 'Kotzen'" src="/assets/richie.png" class="card-img">
@@ -183,7 +183,7 @@
                                 <div class="card-info">
                                 <p class="text-title">{{teacher.firstName}}</p>
                                 <p class="text-body">{{teacher.subject}}</p>
-                                <button class="card-button">Discover Courses</button>
+                                <button class="card-button" @click="goToTeacherCourses(teacher.email)">Discover Courses</button>
                             </div>
                         </div>
                         
