--- a/src/main/resources/static/merchandise.html
+++ b/src/main/resources/static/merchandise.html
@@ -171,11 +171,11 @@
             <div class="container-footer-col#4 col-3">
                 <h3 class="bold">FOLLOW US</h3>
                 <ul class="d-flex gap-4 p-0">
-                    <li><a href="http://"><img src="./assets/facebook.png" alt="facebook" class="social"></a></li>
-                    <li><a href="http://"><img src="./assets/instagram.png" alt="instagram" class="social"></a></li>
-                    <li><a href="http://"><img src="./assets/twitter.png" alt="twitter" class="social"></a></li>
-                    <li><a href="http://"><img src="./assets/youtube.png" alt="youtube" class="social"></a></li>
-                </ul>
+                  <li><a href="https://www.facebook.com/profile.php?id=100083025423365"><img src="./assets/facebook.png" alt="facebook" class="social"></a></li>
+                  <li><a href="https://www.instagram.com/emusicmindhub/"><img src="./assets/instagram.png" alt="instagram" class="social"></a></li>
+                  <li><a href="https://twitter.com/EMusicMindHub"><img src="./assets/twitter.png" alt="twitter" class="social"></a></li>
+                  <li><a href="https://www.youtube.com/channel/UC2nJJf25rRyHdYqcdxUoMwQ"><img src="./assets/youtube.png" alt="youtube" class="social"></a></li>
+              </ul>
                 <form class="subscribe-footer">
                   Subscribe our Newsletter
                   <input type="email" placeholder="@" class="newsletter-input">
