--- a/src/main/resources/static/students.html
+++ b/src/main/resources/static/students.html
@@ -131,8 +131,8 @@
                               </div>
                          </div>
                          <!----------------- MAIN - Right Container ----------------->
-                         <div id="students-right-container">
-                              <div id="calificaciones">
+                         <div class="hidden" id="students-right-container ">
+                              <div id="calificaciones" >
                                    <div id="encabezado_calificaciones">
                                         <p class="no_margin"><span class="encabezados_chicos">Califications</span></p>
                                         <h3 class="bold_white">These are your purchased courses</h3>
@@ -173,7 +173,7 @@
                                    </table>
                               </div>
                               <a href="#">
-                                   <div id="merch">
+                                   <div id="merch" class="hidden">
                                         <p class="bold_white">Want some awsome</p>
                                         <p class="bold_white">merch stuff?</p>
                                    </div>
