--- a/src/main/resources/static/merchandise.html
+++ b/src/main/resources/static/merchandise.html
@@ -27,7 +27,63 @@
                 <!------------------- Shop Car--------------------->
                 <div class="cart">
                     <div class="cart-amount">0</div>
-                    <img src="/assets/cart-01.png">
+                   <!--  <img src="/assets/cart-01.png"> -->
+                   <a type="button" data-bs-toggle="offcanvas" href="#offcanvasRight" aria-controls="offcanvasExample">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-shopping-cart" width="32"
+                      height="32" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round"
+                      stroke-linejoin="round">
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                      <circle cx="6" cy="19" r="2" />
+                      <circle cx="17" cy="19" r="2" />
+                      <path d="M17 17h-11v-14h-2" />
+                      <path d="M6 5l14 1l-1 7h-13" />
+                    </svg>
+                  </a>
+                 
+                   <!-- ---------------------offcanvas shop car ---------------------------- -->
+                  <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+                    <div class="offcanvas-header">
+                      <h5 id="offcanvasRightLabel">Offcanvas right</h5>
+                      <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+                      <table class="table">
+                        <thead>
+                          <tr>
+                            <th scope="col">name</th>
+                            <th scope="col">price</th>
+                            <th scope="col">units</th>
+                            <th scope="col">subtotal</th>
+                            <th scope="col">Eliminar</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr v-for="merch in merchscart">
+                            <td>{{merch.type}}</td>
+                            <td>{{merch.price}}</td>
+                            <td><div id="contador" class="d-flex">
+                              <button v-on:click="disminuirUnidadesAComprar(merch)">-</button>
+                              <input type="text" :value="merch.unidadesAComprar">
+                              <button v-on:click="aumentarUnidadesAComprar(merch)">+</button>
+                            </div></td>
+                            <td>{{calcularSubtotalMerch(merch)}}</td>
+                            <td><button v-on:click="deleteCartMerchs(merch)">Eliminar</button></td>
+                          </tr>
+                          <tr v-for="course in coursescart">
+                            <td>{{course.name}}</td>
+                            <td>{{course.price}}</td>
+                            <td></td>
+                            <td>{{calcularSubtotalCourse(course)}}</td>
+                            <td><button v-on:click="deleteCartCourse(course)">Eliminar</button></td>
+                          </tr>
+                        </tbody>
+                      </table>
+                      <div>
+                        <h4>Total: {{obtenerPrecioTotal()}}</h4>
+                        <button>Finalizar compra</button>
+                      </div>
+                    </div>
+                  </div>
                 </div>
                 <div class="student-header-container">
                     <p>{{firstName}}  {{lastName}}</p>
@@ -99,13 +155,13 @@
                       </div>
                       <div class="merch-card-footer">
                       <span class="merch-card-title">${{merch.price}}</span>
-                      <div class="merch-card-button">
-                        <svg class="svg-icon" viewBox="0 0 20 20">
+                      <a v-on:click="cartMerchs(merch)" class="merch-card-button">
+                        <svg  class="svg-icon" viewBox="0 0 20 20">
                           <path d="M17.72,5.011H8.026c-0.271,0-0.49,0.219-0.49,0.489c0,0.271,0.219,0.489,0.49,0.489h8.962l-1.979,4.773H6.763L4.935,5.343C4.926,5.316,4.897,5.309,4.884,5.286c-0.011-0.024,0-0.051-0.017-0.074C4.833,5.166,4.025,4.081,2.33,3.908C2.068,3.883,1.822,4.075,1.795,4.344C1.767,4.612,1.962,4.853,2.231,4.88c1.143,0.118,1.703,0.738,1.808,0.866l1.91,5.661c0.066,0.199,0.252,0.333,0.463,0.333h8.924c0.116,0,0.22-0.053,0.308-0.128c0.027-0.023,0.042-0.048,0.063-0.076c0.026-0.034,0.063-0.058,0.08-0.099l2.384-5.75c0.062-0.151,0.046-0.323-0.045-0.458C18.036,5.092,17.883,5.011,17.72,5.011z"></path>
                           <path d="M8.251,12.386c-1.023,0-1.856,0.834-1.856,1.856s0.833,1.853,1.856,1.853c1.021,0,1.853-0.83,1.853-1.853S9.273,12.386,8.251,12.386z M8.251,15.116c-0.484,0-0.877-0.393-0.877-0.874c0-0.484,0.394-0.878,0.877-0.878c0.482,0,0.875,0.394,0.875,0.878C9.126,14.724,8.733,15.116,8.251,15.116z"></path>
                           <path d="M13.972,12.386c-1.022,0-1.855,0.834-1.855,1.856s0.833,1.853,1.855,1.853s1.854-0.83,1.854-1.853S14.994,12.386,13.972,12.386z M13.972,15.116c-0.484,0-0.878-0.393-0.878-0.874c0-0.484,0.394-0.878,0.878-0.878c0.482,0,0.875,0.394,0.875,0.878C14.847,14.724,14.454,15.116,13.972,15.116z"></path>
                         </svg>
-                      </div>
+                      </a>
                     </div>
                   </div>
               </div>
