--- a/src/main/resources/static/courses.html
+++ b/src/main/resources/static/courses.html
@@ -42,7 +42,7 @@
 
       <div v-show="charging==false">
           <header class="header bg-courses">
-            <nav class="nav">
+            <nav class="nav slide-bottom">
               <a href="./index.html"><img src="./assets/logo-nav.png" alt="logo" id="logo" class="logo-header"></a>
               <div>
                   <a class="underline-hover-effect ms-3 me-3" href="./index.html">Home</a>
@@ -117,15 +117,16 @@
                   </div>
 
                   <div class="student-header-container">
-                      <p>{{firstName}}  {{lastName}}</p>
-                      <img :src="`./assets/${firstName.toLowerCase()}.png`" alt="student" >
-                      <ul @click="logout">
-                          <li class="d-flex justify-content-between align-items-center"><i class="fa-solid fa-right-from-bracket me-2"></i><p>Logout</p></li>
-                      </ul>
-                  </div>
+                    <p>{{firstName}}  {{lastName}}</p>
+                    <img :src="`./assets/${firstName.toLowerCase()}.png`" alt="student" >
+                    <ul >
+                        <li @click="logout" class="d-flex justify-content-between align-items-center"><i class="fa-solid fa-right-from-bracket me-2"></i><p>Logout</p></li>
+                        <li class="d-flex justify-content-between align-items-center"> <a href="./students.html">Dashboard</a></li>
+                    </ul>
+                </div>
               </div>
           </nav>
-            <div class="header-container-title">
+            <div class="header-container-title slide-top">
                 <h1 class="header-title">Choose your course <span class="font">Now </span></h1>
                 <h2 class="header-title">and go for your dream </h2>
                 <p> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec
@@ -137,7 +138,7 @@
   <!------------ Cards Course ------------>
   <main class="main-courses">
      
-    <div class="page-courses">
+    <div class="page-courses slide-top">
 
       <div class="courses-filter">
           <ul class="filters-ul">
