--- a/src/main/resources/static/merchandise.html
+++ b/src/main/resources/static/merchandise.html
@@ -37,7 +37,7 @@
     </div>
     <div v-show="charging==false">
       <header class="header bg-courses">
-        <nav class="nav">
+        <nav class="nav slide-bottom">
           <a href="./index.html"><img src="./assets/logo-nav.png" alt="logo" id="logo" class="logo-header"></a>
           <div>
               <a class="underline-hover-effect ms-3 me-3" href="./index.html">Home</a>
@@ -111,15 +111,16 @@
                 </div>
               </div>
               <div class="student-header-container">
-                  <p>{{firstName}}  {{lastName}}</p>
-                  <img src="./assets/harvey.png" alt="student" >
-                  <ul>
-                      <li class="d-flex justify-content-between align-items-center"><i class="fa-solid fa-right-from-bracket me-2"></i><p>Logout</p></li>
-                  </ul>
-              </div>
+                <p>{{firstName}}  {{lastName}}</p>
+                <img :src="`./assets/${firstName.toLowerCase()}.png`" alt="student" >
+                <ul >
+                    <li @click="logout" class="d-flex justify-content-between align-items-center"><i class="fa-solid fa-right-from-bracket me-2"></i><p>Logout</p></li>
+                    <li class="d-flex justify-content-between align-items-center"> <a href="./students.html">Dashboard</a></li>
+                </ul>
+            </div>
           </div>
       </nav>
-          <div class="header-container-title">
+          <div class="header-container-title slide-top">
               <h1 class="header-title">Choose your course <span class="font">Now </span></h1>
               <h2 class="header-title">and go for your dream </h2>
               <p> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec
@@ -128,7 +129,7 @@
           </div>
       </header>
       <main>
-        <section class="pageMerch">
+        <section class="pageMerch slide-top">
           <!-- Filters Container -->
           <div class="filters">
             <ul class="filters-ul">
@@ -165,8 +166,7 @@
             </ul>
           </div>
           <!-- Cards Container -->
-          <div class="shop">
-            <button v-on:click="typeFilter">filtrar</button>
+          <div class="shop slide-top">
               <!--Merchandise Card-->
               <div v-for="merch in merchandises" class="merch-card">
                   <div class="merch-card-img"></div>
@@ -268,23 +268,6 @@
 
   </footer>
     </div>
-
-            <div class="container-footer-col#4 col-3">
-                <h3 class="bold">FOLLOW US</h3>
-                <ul class="d-flex gap-4 p-0">
-                  <li><a href="https://www.facebook.com/profile.php?id=100083025423365"><img src="./assets/facebook.png" alt="facebook" class="social"></a></li>
-                  <li><a href="https://www.instagram.com/emusicmindhub/"><img src="./assets/instagram.png" alt="instagram" class="social"></a></li>
-                  <li><a href="https://twitter.com/EMusicMindHub"><img src="./assets/twitter.png" alt="twitter" class="social"></a></li>
-                  <li><a href="https://www.youtube.com/channel/UC2nJJf25rRyHdYqcdxUoMwQ"><img src="./assets/youtube.png" alt="youtube" class="social"></a></li>
-              </ul>
-                <form class="subscribe-footer">
-                  Subscribe our Newsletter
-                  <input type="email" placeholder="@" class="newsletter-input">
-                  <div class="subscribe-btns">
-                      <button type="button" class="buscribe-btn" v-on:click="subscribeEmail()">Subscribe</button>
-                  </div>
-              </form>
-            </div>
 
       {{ headershow }}
       </div>
