agregue para que se vea la cantidad de productos del carrito

--- a/src/main/resources/static/courses.html
+++ b/src/main/resources/static/courses.html
@@ -56,7 +56,7 @@
               <div v-else class="student-cart-container">
                   <!------------------- Shop Car--------------------->
                   <div class="cart">
-                      <div class="cart-amount">0</div>
+                      <div class="cart-amount">{{merchscart.length + coursescart.length}}</div>
                       <!-- <img src="/assets/cart-01.png"> -->
                       <a type="button" data-bs-toggle="offcanvas" href="#offcanvasRight" aria-controls="offcanvasExample">
                         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-shopping-cart" width="32"
