creo pagina teacher-courses.html para ver los cursos por profesos

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -336,7 +336,7 @@
                                 <div class="card-info">
                                 <p class="text-title">{{teacher.firstName}}</p>
                                 <p class="text-body">{{teacher.subject}}</p>
-                                <button class="card-button" @click="goToTeacherCourses(teacher.email)">Discover Courses</button>
+                                <button class="card-button" @click="goToTeacherCourses(teacher.id)">Discover Courses</button>
                         
                     </section>
     
