funcionalidad de pago

--- a/src/main/resources/static/aboutUs.html
+++ b/src/main/resources/static/aboutUs.html
@@ -104,7 +104,7 @@
                                       </table>
                                       <div>
                                         <h4>Total: {{obtenerPrecioTotal()}}</h4>
-                                        <button>Finalizar compra</button>
+                                        <a href="./checkout.html">Finalizar compra</a>
                                       </div>
                                     </div>
                                   </div>
@@ -318,7 +318,7 @@
             {{ headershow }}
 
         </div>
-
+        </div>
         <!----------------------------- SCRIPTS ----------------------------->
         <!--Chatbot Test-->
         <script 
