--- a/src/main/resources/static/courses.html
+++ b/src/main/resources/static/courses.html
@@ -110,7 +110,7 @@
                           </table>
                           <div>
                             <h4>Total: {{obtenerPrecioTotal()}}</h4>
-                            <button>Finalizar compra</button>
+                            <a href="./checkout.html">Finalizar compra</a>
                           </div>
                         </div>
                       </div>
