--- a/src/main/resources/static/merchandise.html
+++ b/src/main/resources/static/merchandise.html
@@ -105,7 +105,7 @@
                     </table>
                     <div>
                       <h4>Total: {{obtenerPrecioTotal()}}</h4>
-                      <button>Finalizar compra</button>
+                      <a href="./checkout.html">Finalizar compra</a>
                     </div>
                   </div>
                 </div>
