trabajando teacher-courses

--- a/src/main/resources/static/courses.html
+++ b/src/main/resources/static/courses.html
@@ -147,7 +147,7 @@
               <img alt="Level 4" src="/assets/skill-level-4.svg" class="level-img">
               All
             </li>
-            <li class="filters-li" @click="filterBy($event)" data-filter-by="principiante">
+            <li class="filters-li" @click="filterBy($event)" data-filter-by="beginner">
 
               <img alt="Level 1" src="/assets/skill-level-1.svg" class="level-img">
               Level 1
