imagenes a los merch

--- a/src/main/resources/static/prueba.html
+++ b/src/main/resources/static/prueba.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <div id="app">
+
+        <img src="./assets/" alt="">
         <button v-on:click="login">LOGIN</button>
         <button v-on:click="ticketCompra">PRUEBA</button>
         <button v-on:click="descargarPDF">PDF</button>
