--- a/src/main/resources/static/prueba.html
+++ b/src/main/resources/static/prueba.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <div id="app">
+        <div class="merch" v-for="merch in filteredMerch">
+            <img :src="merch.urlImage" alt="merch.type">
 
-        <img src="./assets/" alt="">
+        </div>
         <button v-on:click="login">LOGIN</button>
         <button v-on:click="ticketCompra">PRUEBA</button>
         <button v-on:click="descargarPDF">PDF</button>
