--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -403,7 +403,7 @@
                 <div class="card-info">
                   <p class="text-title">{{teacher.firstName}}</p>
                   <p class="text-body">{{teacher.subject}}</p>
-                  <button class="card-button">Discover Courses</button>
+                  <button class="card-button" @click="goToTeacherCourses(teacher.id)">Discover Courses</button>
                 </div>
               </div>
             </div>
