--- a/src/main/resources/static/courses.html
+++ b/src/main/resources/static/courses.html
@@ -18,7 +18,7 @@
   <body>
         <div id="app">
 
-          <div v-show="charging==true" class="header bg-hero">
+          <div v-show="charging==true" class="header black">
             <div class="preloader--container fade-out">
               <div
                 class="heartbeat d-flex align-items-center justify-content-center"
@@ -114,7 +114,7 @@
                             <a href="./checkout.html" class="checkout">Finish purchase</a>
                           </div>
                         </div>
-                    </div>
+       
                   </div>
 
                   <div class="student-header-container">
