--- a/src/main/resources/static/checkout.html
+++ b/src/main/resources/static/checkout.html
@@ -177,7 +177,7 @@
                                             <div class="col-md-6">
                                                 <div class="form-group">
                                                     <label for="cc-exp" class="control-label">CARD EXPIRY</label>
-                                                    <input id="cc-exp" type="tel" class="input-lg form-control cc-exp"
+                                                    <input v-model="date" id="cc-exp" type="tel" class="input-lg form-control cc-exp"
                                                         autocomplete="cc-exp" placeholder="&bull;&bull; / &bull;&bull;" >
                                                 </div>
             
