--- a/src/main/resources/static/merchandise.html
+++ b/src/main/resources/static/merchandise.html
@@ -118,7 +118,7 @@
                     <li @click="logout" class="d-flex justify-content-between align-items-center"><i class="fa-solid fa-right-from-bracket me-2"></i><p>Logout</p></li>
                     <li class="d-flex justify-content-between align-items-center"> <a href="./students.html">Dashboard</a></li>
                 </ul>
-            </div>
+              </div>
           </div>
       </nav>
           <div class="header-container-title slide-top">
@@ -136,7 +136,7 @@
             <ul class="filters-ul">
               <li class="filters-li">FILTERS</li>
               <li class="filters-li"  @click="getAll">
-                <img alt="All" src="" class="instrument-img">
+                <img alt="All" src="./assets/merch-icons-00-09.png" class="instrument-img">
                 All
               </li>
               <li class="filters-li" data-merch-type="cup" @click="filterBy($event)">
@@ -206,13 +206,21 @@
                   </div>
                   <div class="merch-card-footer">
                   <span class="merch-card-title">${{merch.price}}</span>
-                  <div v-on:click="cartMerchs(merch)" class="merch-card-button">
-                    <svg class="svg-icon" viewBox="0 0 20 20">
-                      <path d="M17.72,5.011H8.026c-0.271,0-0.49,0.219-0.49,0.489c0,0.271,0.219,0.489,0.49,0.489h8.962l-1.979,4.773H6.763L4.935,5.343C4.926,5.316,4.897,5.309,4.884,5.286c-0.011-0.024,0-0.051-0.017-0.074C4.833,5.166,4.025,4.081,2.33,3.908C2.068,3.883,1.822,4.075,1.795,4.344C1.767,4.612,1.962,4.853,2.231,4.88c1.143,0.118,1.703,0.738,1.808,0.866l1.91,5.661c0.066,0.199,0.252,0.333,0.463,0.333h8.924c0.116,0,0.22-0.053,0.308-0.128c0.027-0.023,0.042-0.048,0.063-0.076c0.026-0.034,0.063-0.058,0.08-0.099l2.384-5.75c0.062-0.151,0.046-0.323-0.045-0.458C18.036,5.092,17.883,5.011,17.72,5.011z"></path>
-                      <path d="M8.251,12.386c-1.023,0-1.856,0.834-1.856,1.856s0.833,1.853,1.856,1.853c1.021,0,1.853-0.83,1.853-1.853S9.273,12.386,8.251,12.386z M8.251,15.116c-0.484,0-0.877-0.393-0.877-0.874c0-0.484,0.394-0.878,0.877-0.878c0.482,0,0.875,0.394,0.875,0.878C9.126,14.724,8.733,15.116,8.251,15.116z"></path>
-                      <path d="M13.972,12.386c-1.022,0-1.855,0.834-1.855,1.856s0.833,1.853,1.855,1.853s1.854-0.83,1.854-1.853S14.994,12.386,13.972,12.386z M13.972,15.116c-0.484,0-0.878-0.393-0.878-0.874c0-0.484,0.394-0.878,0.878-0.878c0.482,0,0.875,0.394,0.875,0.878C14.847,14.724,14.454,15.116,13.972,15.116z"></path>
-                    </svg>
-                  </div>
+                    <figure v-on:click="cartMerchs(merch)">
+                      <img src="./assets/btn_buy_course-06-06.png">
+                      <figcaption>ADD TO THE CART
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-shopping-cart-plus"
+                          width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ce0202" fill="none"
+                          stroke-linecap="round" stroke-linejoin="round">
+                          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                          <circle cx="6" cy="19" r="2" />
+                          <circle cx="17" cy="19" r="2" />
+                          <path d="M17 17h-11v-14h-2" />
+                          <path d="M6 5l6.005 .429m7.138 6.573l-.143 .998h-13" />
+                          <path d="M15 6h6m-3 -3v6" />
+                        </svg>
+                      </figcaption>
+                    </figure>
                 </div>
               </div>
           </div>
