--- a/src/main/resources/static/courses.html
+++ b/src/main/resources/static/courses.html
@@ -130,9 +130,7 @@
             <div class="header-container-title slide-top">
                 <h1 class="header-title">Choose your course <span class="font">Now </span></h1>
                 <h2 class="header-title">and go for your dream </h2>
-                <p> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec
-                    odio. Quisque volutpat mattis eros. Nullam malesuada erat ut
-                    turpis.</p>
+                <p> he level required to tackle a course will always be well defined so that you can find your way. You can check the Progress Table at any time to see where you are!</p>
             </div>
         </header>
         
