--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -149,9 +149,7 @@
             </h1>
             <h2 class="header-title">now let's rock!</h2>
             <p>
-              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec
-              odio. Quisque volutpat mattis eros. Nullam malesuada erat ut
-              turpis.
+              From beginners to advanced, easily find the courses that interest you, at any time to see where you are!
             </p>
             <div>
               <input
@@ -176,9 +174,8 @@
               <h3 class="red">Our Class</h3>
               <h2>Our Music Class</h2>
               <p>
-                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec
-                odio. Quisque volutpat mattis eros. Nullam malesuada erat ut
-                turpis.
+                The emusic-school method
+
               </p>
             </div>
 
@@ -211,9 +208,7 @@
                 <div class="ms-3">
                   <h4 class="">{{course.name}}</h4>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-                    Donec odio. Quisque volutpat mattis eros. Nullam malesuada
-                    erat ut turpis.
+                    At the end of the Basic {{course.name}} Course you will recognize the composition,  and how to play your first notes, as well as what criteria to follow when continuing your individual practice
                   </p>
                 </div>
               </div>
@@ -300,13 +295,7 @@
           <section class="students hidden">
             <div class="students-subcontainer-one">
               <h2>What our students say</h2>
-              <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry. Lorem Ipsum has been the industry's standard dummy
-                text ever since the 1500s, when an unknown printer took a galley
-                of type and scrambled it to make a type specimen book. It has
-                survived not only five centuries, but also the leap into
-                electronic typesetting
+              <p>You can follow classical teaching with conservatory teachers, approach your instrument in a more playful way with courses that combine fun and learning. Or, learn music from specialists with whom you can delve into more specific aspects or certain musical styles.
               </p>
               <div class="students-conatiner-home">
                 <div v-for="student in studentsMax4" class="student-container">
