--- a/src/main/resources/static/students.html
+++ b/src/main/resources/static/students.html
@@ -131,9 +131,8 @@
                          <div class="header-container-title slide-top">
                               <h1 class="header-title">Your personal <span class="font">Dashboard </span></h1>
                               <h2 class="header-title">Fusce plentesque suscipit</h2>
-                              <p> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec
-                              odio. Quisque volutpat mattis eros. Nullam malesuada erat ut
-                              turpis.</p>
+                              <p>
+                                   The videos have a short format to facilitate your progression and navigation. Each addresses a specific pedagogical point.</p>
                          </div>
                     </header>
      
